welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: ';' expected but integer literal found.
  if (a==b) {if (b==c) return 20 else reurn 10}
                                            ^